# LLM-Code-Performance

./: .gitignore  README.md  processTimes.scala  times.txt
C/: benchmark.sh  times.txt
C++/ChatGPT4/: NBodySimulation.cpp  NBodySimulationKD.cpp  NBodySimulationKDop.cpp  NBodySimulationPar.cpp
C++/Copilot/: NBodySimulation.cpp  NBodySimulationKD.cpp  NBodySimulationKDop.cpp  NBodySimulationPar.cpp
C/ChatGPT4/: NBodySimulation.c  NBodySimulationKD.c  NBodySimulationKD.c.bad  NBodySimulationOPT.c  NBodySimulationOPT.c.bad  NBodySimulationPar.c  README.md  build.sh
C/Claude/: NBodySimulation.c  NBodySimulationKD.c  NBodySimulationOPT.c  NBodySimulationOPT.c.bad  NBodySimulationPar.c  README.md  build.sh
C/Copilot/: NBodySimulation.c  NBodySimulationKD.c  NBodySimulationKD.c.bad  NBodySimulationOPT.c  NBodySimulationOPT.c.bad  NBodySimulationPar.c  README.md  build.sh
C/Gemini/: NBodySimulation.c  NBodySimulationKD.c  NBodySimulationKD.c.bad  NBodySimulationOPT.c  NBodySimulationPar.c  README.md  build.sh
C/Gemini2.5/: NBodySimulation.c  NBodySimulationKD.c  NBodySimulationOpt.c  NBodySimulationPar.c  README.md  build.sh  run.sh
C/Human/: build.sh  nbody.c  times.txt
Go/: benchmark.sh  times.txt
Go/ChatGPT4/: NBodySimulation.go  NBodySimulationKD.go  NBodySimulationKDop.go.bad  NBodySimulationPar.go  README.md  run.sh
Go/Claude/: NBodySimulation.go  NBodySimulationKD.go  NBodySimulationKDop.go  NBodySimulationPar.go  README.md
Go/Copilot/: NBodySimulation.go  NBodySimulationKD.go  NBodySimulationKD.go.bad  NBodySimulationKDop.go  NBodySimulationKDop.go.bad  NBodySimulationPar.go  README.md  build.sh
Go/Gemini/: NBodySimulation.go  NBodySimulationKD.go  NBodySimulationKD.go.bad  NBodySimulationKDop.go  NBodySimulationPar.go  README.md  go.sum
Go/Gemini2.5/: NBodySimulation.go  NBodySimulationKD.go  NBodySimulationOpt.go.bad  NBodySimulationPar.go  build.sh  run.sh
Go/Human/: nbody.go  times.txt
Golang/: NBodySimulation.go  NBodySimulationKD.go  NBodySimulationOpt.go  NBodySimulationPar.go  README.md
Java/: benchmark.sh  times.txt
Java/ChatGPT4/: NBodyKDTreeKD.java  NBodySimulation.java  NBodySimulationKD.java  NBodySimulationKDop.java  NBodySimulationPar.java  README.md  run.sh
Java/Claude/: NBodySimulation.java  NBodySimulationKD.java  NBodySimulationKDop.java  NBodySimulationPar.java  README.md  run.sh
Java/Copilot/: NBodySimulation.java  NBodySimulationKD.java  NBodySimulationKDop.java  NBodySimulationKDop.java.bad  NBodySimulationPar.java  README.md  run.sh
Java/Gemini/: NBodySimulation.java  NBodySimulationKD.java  NBodySimulationPar.java  README.md
Java/Gemini2/: NBodySimulation.java  NBodySimulationKD.java  NBodySimulationPar.java  run.sh
Java/Gemini2.5/: NBodySimulation.java  NBodySimulationKDTree.java  NBodySimulationKDTree.java.bad  NBodySimulationOptimized.java  NBodySimulationParallel.java  README.md  run.sh
Java/Human/: NBodySimulationPar.java  nbody.java  times.txt
Julia/: benchmark.sh  times.txt
Julia/ChatGPT4/: NBodySimulation.jl  NBodySimulationKD.jl  NBodySimulationKD.jl.bad  NBodySimulationKDop.jl  NBodySimulationPar.jl  README.md  run.sh
Julia/Claude/: NBodySimulation.jl  NBodySimulationKD.jl  NBodySimulationKD.jl.bad  NBodySimulationKDop.jl  NBodySimulationPar.jl  README.md
Rust/: benchmark.sh  times.txt
Rust/Claude/nbody_simulation_par/: Cargo.toml
Rust/Claude/nbody_simulation_par/src/: main.rs
Rust/Gemini2.5/bad_nbody_simulation_opt/: Cargo.toml
Rust/Gemini2.5/bad_nbody_simulation_opt/src/: main.rs
Rust/Gemini2.5/nbody_simulation_kd/: Cargo.toml
Rust/Gemini2.5/nbody_simulation_kd/src/: main.rs
Rust/Human/nbody_simulation_kd/: Cargo.toml  optimization_plan.txt
Rust/Human/nbody_simulation_kd/src/: array_kd_tree.rs  array_particle.rs  main.rs
Rust/Human/nbody_simulation_opt/: Cargo.toml  OPTIMIZATION_RESULTS.md
Rust/Human/nbody_simulation_par/: Cargo.toml
(+149 files in other folders)
