[package]
name = "nbody_simulation_opt"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
rayon = "1.10"
ordered-float = "4.2" # Keep if using the crate version
typed-arena = "2.0"   # Add this

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
lto = "fat"
opt-level = 3      # Default for release, ensure it's set
debug = false      # Default for release, smaller binary, potentially faster
codegen-units = 1  # Maximize intra-crate optimization scope
panic = 'abort'    # Optional: Slightly smaller/faster code by aborting on panic instead of unwinding