[package]
name = "rust_par_nbody"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.4"
rayon = "1.8.1"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
lto = "fat"
opt-level = 3      # Default for release, ensure it's set
debug = false      # Default for release, smaller binary, potentially faster
codegen-units = 1  # Maximize intra-crate optimization scope
panic = 'abort'    # Optional: Slightly smaller/faster code by aborting on panic instead of unwinding